{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 52,
  "lineage": "e21c1415-2b2e-5894-afe0-92951ba2b319",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "secure_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00ca570c1b6d79f36",
            "arn": "arn:aws:ec2:ap-south-1:320170176975:instance/i-0820a522deebc33fb",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SecureEC2InstanceProfile-TF",
            "id": "i-0820a522deebc33fb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d2928ff1a3e06044"
              }
            ],
            "primary_network_interface_id": "eni-0d2928ff1a3e06044",
            "private_dns": "ip-10-20-1-150.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.150",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:320170176975:key/9c4489f6-4fa0-4c69-9b83-e3d8dee69b3e",
                "throughput": 125,
                "volume_id": "vol-090cf937251b14ab0",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd0abec5c92d6a19",
            "tags": {
              "IT_OWNER_EMAIL": "anant.vaish@veolia.com",
              "Name": "SecureEC2Instance"
            },
            "tags_all": {
              "IT_OWNER_EMAIL": "anant.vaish@veolia.com",
              "Name": "SecureEC2Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d0a2e6f4a9a26e24"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320170176975",
            "id": "i-0820a522deebc33fb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.ec2_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_iam_policy_document.ec2_trust",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320170176975:route-table/rtb-0d0d5a8d87975d717",
            "id": "rtb-0d0d5a8d87975d717",
            "owner_id": "320170176975",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "IT_OWNER_EMAIL": "anant.vaish@veolia.com",
              "Name": "secure-ec2-private-rt"
            },
            "tags_all": {
              "IT_OWNER_EMAIL": "anant.vaish@veolia.com",
              "Name": "secure-ec2-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0460a607dbddf0e57"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320170176975",
            "id": "rtb-0d0d5a8d87975d717",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b7bbbf9c1f97db2",
            "region": "ap-south-1",
            "route_table_id": "rtb-0d0d5a8d87975d717",
            "subnet_id": "subnet-0bd0abec5c92d6a19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320170176975:security-group/sg-0d0a2e6f4a9a26e24",
            "description": "Security group for secure EC2 (restricted SSH + minimal ingress)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0a2e6f4a9a26e24",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS public",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "203.0.113.0/32"
                ],
                "description": "SSH restricted",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "secure-ec2-sg",
            "name_prefix": "",
            "owner_id": "320170176975",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "IT_OWNER_EMAIL": "anant.vaish@veolia.com",
              "Name": "secure-ec2-sg"
            },
            "tags_all": {
              "IT_OWNER_EMAIL": "anant.vaish@veolia.com",
              "Name": "secure-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0460a607dbddf0e57"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320170176975",
            "id": "sg-0d0a2e6f4a9a26e24",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320170176975:subnet/subnet-0bd0abec5c92d6a19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd0abec5c92d6a19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320170176975",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "IT_OWNER_EMAIL": "anant.vaish@veolia.com",
              "Name": "secure-ec2-private-subnet"
            },
            "tags_all": {
              "IT_OWNER_EMAIL": "anant.vaish@veolia.com",
              "Name": "secure-ec2-private-subnet"
            },
            "vpc_id": "vpc-0460a607dbddf0e57"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320170176975",
            "id": "subnet-0bd0abec5c92d6a19",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320170176975:vpc/vpc-0460a607dbddf0e57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-09d0283ffc31cf24b",
            "default_route_table_id": "rtb-0a272c098e3084a8d",
            "default_security_group_id": "sg-0ad61fe67457b805c",
            "dhcp_options_id": "dopt-4c787e24",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0460a607dbddf0e57",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a272c098e3084a8d",
            "owner_id": "320170176975",
            "region": "ap-south-1",
            "tags": {
              "IT_OWNER_EMAIL": "anant.vaish@veolia.com",
              "Name": "secure-ec2-vpc"
            },
            "tags_all": {
              "IT_OWNER_EMAIL": "anant.vaish@veolia.com",
              "Name": "secure-ec2-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "320170176975",
            "id": "vpc-0460a607dbddf0e57",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}